--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-wrap-balancer": "^1.1.1",
+    "sonner": "^1.7.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
