--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@aws-sdk/s3-request-presigner": "^3.417.0",
     "@clerk/nextjs": "^4.23.5",
     "@heroicons/react": "^2.0.18",
-    "@prisma/client": "^5.3.1",
+    "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-tooltip": "^1.0.6",
@@ -27,9 +28,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.54.2",
     "react-wrap-balancer": "^1.1.1",
     "sonner": "^1.7.1",
-    "zod": "^3.22.2"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
