--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "clsx": "^2.0.0",
     "focus-trap-react": "^10.0.0",
     "framer-motion": "^10.12.4",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.469.0",
     "next": "13.5.3",
+    "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
     "react-wrap-balancer": "^1.1.1",
+    "resend": "^4.0.1",
     "sonner": "^1.7.1",
+    "tailwind-merge": "^2.6.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
