--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@vercel/analytics": "^1.0.0",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
     "focus-trap-react": "^10.0.0",
     "framer-motion": "^10.12.4",
     "lucide-react": "^0.469.0",
+    "ms": "^2.1.3",
     "next": "13.5.3",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
