--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ms": "^2.1.3",
     "next": "13.5.3",
     "next-themes": "^0.4.4",
+    "openai": "^4.77.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
