--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/analytics": "^1.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
+    "encoding": "^0.1.13",
     "focus-trap-react": "^10.0.0",
     "framer-motion": "^10.12.4",
     "lucide-react": "^0.469.0",
@@ -48,6 +49,7 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9.17.0",
     "postcss": "^8.4.30",
     "prisma": "^5.3.1",
     "tailwindcss": "^3.3.3",
