--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@aws-sdk/client-s3": "^3.417.0",
     "@aws-sdk/s3-request-presigner": "^3.417.0",
     "@clerk/nextjs": "^4.23.5",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.1.0",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-tooltip": "^1.0.6",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@vercel/analytics": "^1.0.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "encoding": "^0.1.13",
     "focus-trap-react": "^10.0.0",
@@ -31,6 +34,7 @@
     "next-themes": "^0.4.4",
     "openai": "^4.77.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.4.4",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
@@ -38,20 +42,21 @@
     "resend": "^4.0.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.6",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.17.0",
     "postcss": "^8.4.30",
-    "prisma": "^5.3.1",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   }
