--- a/package.json
+++ b/package.json
@@ -16,26 +16,50 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.9.1",
+    "@nextui-org/react": "^2.6.10",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@vercel/analytics": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "2.29.3",
     "encoding": "^0.1.13",
     "focus-trap-react": "^10.0.0",
-    "framer-motion": "^10.12.4",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "ms": "^2.1.3",
-    "next": "13.5.3",
+    "next": "^15.1.3",
     "next-themes": "^0.4.4",
     "openai": "^4.77.0",
-    "react": "^18.2.0",
-    "react-day-picker": "^9.4.4",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-day-picker": "9.4.4",
+    "react-dom": "^19.0.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
     "react-wrap-balancer": "^1.1.1",
@@ -47,6 +71,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
