--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "stripe:products": "ts-node -r tsconfig-paths/register scripts/create-stripe-products.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.417.0",
@@ -69,6 +70,8 @@
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
