--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "stripe:products": "ts-node -r tsconfig-paths/register scripts/create-stripe-products.ts"
+    "stripe:products": "NODE_OPTIONS='--loader ts-node/esm' ts-node -P scripts/tsconfig.json scripts/create-stripe-products.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.417.0",
@@ -80,10 +80,11 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.6.3",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "postcss": "^8.4.30",
     "prisma": "^6.1.0",
