refactor: Enhance event management and middleware functionality
- Updated middleware to streamline authentication and route handling for public and ignored paths.
- Removed deprecated error logging and improved error handling in API routes for families and events.
- Refactored event creation modal to support default family selection and improved participant management.
- Enhanced user experience by adding new utility functions for date and currency formatting.
- Updated package dependencies for better performance and compatibility, including Stripe SDK and utility libraries.
- Cleaned up unused code and improved overall code structure for maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
       "@/pages/*": ["pages/*"],
       "@/app/*": ["app/*"],
       "@/lib/*": ["lib/*"],
-      "@/styles/*": ["styles/*"]
+      "@/styles/*": ["styles/*"],
+      "@/types": ["types"],
+      "@/types/*": ["types/*"],
+      "@/hooks/*": ["hooks/*"]
     },
     "strict": true,
     "forceConsistentCasingInFileNames": true,
