--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@stripe/stripe-js": "^5.4.0",
-    "@vercel/analytics": "^1.0.0",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "2.29.3",
@@ -80,6 +81,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/ms": "^0.7.34",
     "@types/node": "^22.10.2",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
