refactor: Enhance event and family management features
- Updated event creation process to utilize async/await for improved readability and error handling.
- Refactored EventsPage to fetch events based on user membership, ensuring only relevant events are displayed.
- Enhanced CreateEventModal to validate required fields and streamline participant selection.
- Improved family management by integrating user roles and family memberships into the dashboard.
- Updated Tailwind CSS configuration for better design consistency and added utility classes for common patterns.
- Added new test script in package.json for event creation validation.
- Cleaned up unused imports and improved overall code structure for maintainability.

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,31 +1,19 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es2017",
     "module": "commonjs",
-    "lib": ["es2017", "esnext.asynciterable"],
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "outDir": "./dist",
     "moduleResolution": "node",
-    "removeComments": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
+    "target": "es2017",
+    "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["../*"]
+      "*": ["../node_modules/*"]
     }
   },
-  "exclude": ["node_modules"],
-  "include": ["./**/*.ts"]
+  "include": ["./**/*"],
+  "ts-node": {
+    "transpileOnly": true,
+    "files": true
+  }
 } 
