--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "stripe:products": "NODE_OPTIONS='--loader ts-node/esm' ts-node -P scripts/tsconfig.json scripts/create-stripe-products.ts"
+    "stripe:products": "NODE_OPTIONS='--loader ts-node/esm' ts-node -P scripts/tsconfig.json scripts/create-stripe-products.ts",
+    "test:event": "ts-node --project scripts/tsconfig.json scripts/test-event-creation.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.417.0",
