--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:event": "ts-node --project scripts/tsconfig.json scripts/test-event-creation.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.13",
     "@aws-sdk/client-s3": "^3.417.0",
     "@aws-sdk/s3-request-presigner": "^3.417.0",
     "@clerk/nextjs": "^4.23.5",
@@ -48,8 +49,10 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@stripe/stripe-js": "^5.4.0",
+    "@tanstack/react-query": "^5.62.14",
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
+    "ai": "^4.0.25",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "2.29.3",
@@ -60,7 +63,8 @@
     "ms": "^2.1.3",
     "next": "^15.1.3",
     "next-themes": "^0.4.4",
-    "openai": "^4.77.0",
+    "openai": "^4.77.3",
+    "openai-edge": "^1.2.2",
     "react": "^19.0.0",
     "react-day-picker": "9.4.4",
     "react-dom": "^19.0.0",
@@ -75,6 +79,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "vaul": "^1.1.2",
+    "vercel": "^39.2.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
