--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-hook-form": "^7.54.2",
     "react-wrap-balancer": "^1.1.1",
     "resend": "^4.0.1",
+    "shadcn": "^2.1.8",
     "sonner": "^1.7.1",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
