--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.13",
-    "@aws-sdk/client-s3": "^3.417.0",
+    "@aws-sdk/client-s3": "^3.722.0",
     "@aws-sdk/client-sso-oidc": "^3.721.0",
     "@aws-sdk/client-sts": "^3.721.0",
     "@aws-sdk/s3-request-presigner": "^3.722.0",
@@ -54,7 +54,7 @@
     "@tanstack/react-query": "^5.62.14",
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
-    "ai": "^4.0.25",
+    "ai": "^2.2.35",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "2.29.3",
@@ -65,7 +65,7 @@
     "ms": "^2.1.3",
     "next": "^15.1.3",
     "next-themes": "^0.4.4",
-    "openai": "^4.77.3",
+    "openai": "^4.28.0",
     "openai-edge": "^1.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -76,6 +76,7 @@
     "react-wrap-balancer": "^1.1.1",
     "resend": "^4.0.1",
     "shadcn": "^2.1.8",
+    "shadcn-ui": "^0.9.4",
     "sonner": "^1.7.1",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
@@ -98,6 +99,8 @@
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8.4.30",
     "prisma": "6.1.0",
     "tailwindcss": "^3.4.17",
