--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "tsconfig-paths": "^4.2.0",
     "vaul": "^1.1.2",
     "vercel": "^39.2.5",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
