--- a/package.json
+++ b/package.json
@@ -52,16 +52,17 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@stripe/stripe-js": "^5.4.0",
     "@tanstack/react-query": "^5.62.14",
+    "@tanstack/react-table": "^8.20.6",
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
     "ai": "^2.2.35",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "2.29.3",
+    "date-fns": "^4.1.0",
     "encoding": "^0.1.13",
     "focus-trap-react": "^10.0.0",
     "framer-motion": "^11.15.0",
-    "lucide-react": "^0.469.0",
+    "lucide-react": "^0.473.0",
     "ms": "^2.1.3",
     "next": "^15.1.3",
     "next-themes": "^0.4.4",
