--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "stripe:products": "NODE_OPTIONS='--loader ts-node/esm' ts-node -P scripts/tsconfig.json scripts/create-stripe-products.ts",
-    "test:event": "ts-node --project scripts/tsconfig.json scripts/test-event-creation.ts"
+    "test:event": "ts-node --project scripts/tsconfig.json scripts/test-event-creation.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.417.0",
@@ -79,6 +81,12 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-links": "^8.5.0",
+    "@storybook/builder-vite": "^8.5.0",
+    "@storybook/react": "^8.5.0",
+    "@storybook/react-vite": "^8.5.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
@@ -86,12 +94,14 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "postcss": "^8.4.30",
     "prisma": "^6.1.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^6.0.7"
   }
 }
